Signed-off-by: Ruhunu <ruhunuDump@gmail.com>

--- a/src/main/webapp/reportLab/report_lab_collection_centre.xhtml
+++ b/src/main/webapp/reportLab/report_lab_collection_centre.xhtml
@@ -79,6 +79,12 @@
                         </f:facet>
                         <h:outputLabel value="#{d.insId}"/>
                     </p:column>
+                    <p:column headerText="Bill No">
+                        <f:facet name="header">
+                            <h:outputLabel value="Bill No"/>                        
+                        </f:facet>
+                        <h:outputLabel value="#{d.referralNumber}"/>
+                    </p:column>
                     <p:column headerText="Patient Name">
                         <f:facet name="header">
                             <h:outputLabel value="Patient Name"/>                        
