--- a/src/main/webapp/resources/pharmacy/issue.xhtml
+++ b/src/main/webapp/resources/pharmacy/issue.xhtml
@@ -266,12 +266,12 @@
                             </td>
                             <td  styleClass="itemsBlockRight"  style="text-align: right; padding-right: 30px;" >
                                 <h:outputLabel    value="#{bip.netRate}"     >
-                                    <f:convertNumber pattern="#,####0.0000" />
+                                    <f:convertNumber pattern="#,##0.00" />
                                 </h:outputLabel>
                             </td>
                             <td  styleClass="itemsBlockRight" style="text-align: right; padding-right: 30px;" >
                                 <h:outputLabel    value="#{bip.netValue}"    >
-                                    <f:convertNumber pattern="#,####0.0000" />
+                                    <f:convertNumber pattern="#,##0.00" />
                                 </h:outputLabel>
                             </td>
 
