--- a/src/main/webapp/channel/channel_reports.xhtml
+++ b/src/main/webapp/channel/channel_reports.xhtml
@@ -115,6 +115,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All My Booking Detail List" action="/channel/channel_report_by_bill_class_by_user" actionListener="#{channelReportController.clearAll}"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Today All My Booking Summery" action="/channel/channel_report_cashier_summery_date"/>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="All Bill Detail By Payment Methord" action="/channel/channel_report_by_bill_class_by_user_by_payment_methord" actionListener="#{channelReportController.clearAll}"/>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Channel Count By Users" action="/channel/report_cashier_vise_count" />
                                     </h:panelGrid>
                                 </p:panel>
                             </h:panelGrid>
