cahnnel Validation Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -509,7 +509,7 @@
                                     </h:panelGroup>
 
                                     <h:panelGroup rendered="#{sessionController.institutionPreference.applicationInstitution eq 'Cooperative'}" >
-                                        <ch:channelReciptPos_coop bill="#{channelBillController.billSession.billItem.bill}" dup="false"/>
+                                        <ch:channelReciptPos_coop bill="#{channelBillController.printingBill}" dup="false"/>
                                     </h:panelGroup>
 
                                 </h:panelGroup>
