Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/resources/bill/opdBillPrintCoop.xhtml
+++ b/src/main/webapp/resources/bill/opdBillPrintCoop.xhtml
@@ -32,7 +32,7 @@
     margin: auto!important; 
     font-size: 13px!important;
     font-weight: bold;">
-                        <h:outputLabel value="#{cc.attrs.bill.toDepartment.name}"/>
+                        <h:outputLabel value="#{cc.attrs.bill.toDepartment.name}" style="font-size: 17px!important"/>
                         <h:outputLabel value="**Cancelled"  
                                        rendered="#{cc.attrs.bill.cancelledBill.deptId ne null and cc.attrs.cancell eq true}"/> 
 
